@@ -70,6 +70,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hdfs
+operator|.
+name|web
+operator|.
+name|WebHdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|security
 operator|.
 name|authentication
@@ -97,6 +113,26 @@ operator|.
 name|web
 operator|.
 name|DelegationTokenAuthenticationFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|token
+operator|.
+name|delegation
+operator|.
+name|web
+operator|.
+name|KerberosDelegationTokenAuthenticationHandler
 import|;
 end_import
 
@@ -453,6 +489,27 @@ name|signatureSecretFile
 argument_list|)
 throw|;
 block|}
+name|setAuthHandlerClass
+argument_list|(
+name|props
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|setProperty
+argument_list|(
+name|KerberosDelegationTokenAuthenticationHandler
+operator|.
+name|TOKEN_KIND
+argument_list|,
+name|WebHdfsConstants
+operator|.
+name|WEBHDFS_TOKEN_KIND
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return
 name|props
 return|;
